NavBar no longer wraps

--- a/autoscheduler/frontend/src/components/NavBar/NavBar.css
+++ b/autoscheduler/frontend/src/components/NavBar/NavBar.css
@@ -1,4 +1,11 @@
-.name-and-button {
+.logout-container {
     display: flex;
     align-items: center;
+    min-width: 0;
+}
+
+.user-name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
